--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 monitor_filters = colorize
+lib_deps = 
+    fastled/FastLED@^3.3.3
